# HistomicsML

./: README.md  docker-compose.yml
al_server/: CMakeLists.txt  FindCBLAS.cmake  FindJANSSON.cmake  FindLIBCONFIG.cmake
al_server/scripts/: al_server  al_server.conf
al_server/src/: CMakeLists.txt  base_config.h.in  classifier.cpp  classifier.h  commands.h  data.cpp  data.h  learner.cpp  learner.h  logger.cpp  logger.h  ocvrandforest.cpp  ocvrandforest.h  ocvsvm.cpp  ocvsvm.h  picker.cpp  picker.h  sampler.cpp  sampler.h  server.cpp  sessionClient.cpp  sessionClient.h  sessionMgr.cpp  sessionMgr.h  validate-main.cpp  validate-opt.ggo.in
docs/: Makefile  conf.py  data-format.rst  data-import.rst  example.rst  index.rst  installation.rst  make.bat  reports.rst  validation.rst
scripts/: GBM-boundaryExtract.sh  add_users.py  buildGBMfeatures.py  buildSOX2features.py  create_dataset.py  database_create.sql  extract-GBM-nuclei.py  extractBoundaries.sh  extract_tiles.sh  hostspecs.php  nuclei-extract.py  server_install.sh
segmentation_pipeline/: FSDs.m  FeatureExtraction.m  Foreground.m  Individual.m  InterpolateArcLength.m  SGESegmentationProcessTiles.m  SegmentationProcessTiles.m  SegmentationReport.c  log2space.m
segmentation_pipeline/BoundaryValidator/: CrustPolygonalReconstruction.m  DeleteDuplicateVertices.m  MergeColinear.m  RemoveSpurs.m  SelfConstrainedDelaunay.m  TestCases.m  script.m
segmentation_pipeline/ColorDeconvolution/: ColorDeconvolution.m  ColorReconvolution.m  ComplementStains.m  DeconvolutionDenormalize.m  DeconvolutionNormalize.m  im2vec.m
segmentation_pipeline/ColorNormalization/: ClusterScript.m  ColorNormalization_Folder.m  ColorNormalization_MultipleFolders.m  ColorNormalization_Tile.m  PixelClass.m  SegFG.m  TargetParameters.m  lab2rgb.m  rgb2lab.m  transferI.m
segmentation_pipeline/JobSubmission/: SubmitSGEJob.m  SubmitTorqueJob.m
segmentation_pipeline/OpenSlide/: openslide_can_open.C  openslide_check_levels.C  openslide_read_regions.C
web_app/: data.html  grid.html  heatmaps.html  index_home.html  index_main.html  picker.html  picker_review.html  prime.html  reports.html  review.html  survival_cp.html  validation.html  viewer.html
web_app/css/: forTestonly.css  main.css
web_app/db/: .gitignore  connect.php  getBoundariesForThumbs.php  getImgSize.php  getPyramidPath.php  getTestsetForDataset.php  getTrainingSets.php  getTrainsetForDataset.php  getTrainsetInfo.php  getdatasets.php  getnuclei.php  getsingle.php  getslides.php  logging.php  multiCoeff.php
web_app/js/: app_main.js  array-utils.js  data.js  grid.js  heatmaps.js  importCSV.js  kaplan-meier.js  picker.js  picker_review.js  prime.js  reports.js  review.js  survival.js  validation_main.js  viewer.js
web_app/php/: .gitignore  addObjects.php  apply.php  cancelSession.php  count.php  data.php  data_delete.php  data_getdatasetsfromdir.php  endClassifier.php  finishPicker.php  finishReloadedPicker.php  finishReloadedSession.php  finishSession.php  getObjCount.php  getSession.php  initClassifier.php  initSession.php  initpicker.php  map.php  pickerReviewSamples.php  primeSession.php  reloadPicker.php  reloadSession.php  reviewSamples.php  savePickerReview.php  saveReview.php  selectSamples.php  serverComm.php  submitSamples.php  validate.php
web_app/python/: multiCoeff.py  tableContent.php
web_app/scripts/: boundaryExtractforingestion.sh  create_dataset_importtab.py  extract-GBM-nuclei.py  gen_slide_list.sh
